fixed media icons

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <div class="inner-wrapper">
             <div class="heading-icons">
                 <a href= "https://www.linkedin.com/in/fanny-cardell-354a4863/">
-                <img src="./images/linkedin-icon.png" alt="Linkedin icon">
+                <img src="./images/LinkedInIcon.png" alt="Linkedin icon">
                 <span class="sr-only">Go to LinkedIn profile</span>
                 </a>
                 <a href="https://github.com/fannycardell">
-                <img src="./images/github-icon.png" alt="Github icon">
+                <img src="./images/GitHubIcon.png" alt="Github icon">
                 <span class="sr-only">Go to LinkedIn profile</span> 
                 </a>
                 <a href="https://stackoverflow.com/users/19752574/fanny-cardell">    
-                <img src="./images/Stack-icon.png" alt="StackOverflow icon">
+                <img src="./images/StackIcon.png" alt="StackOverflow icon">
                 <span class="sr-only">Go to stack overflow profile</span>
                 </a>
             </div>
@@ -295,14 +295,14 @@
             <h4 class="section-headline">for more</h4>
                 <div class= "for-more-icons">
                     <a href= "https://www.linkedin.com/in/fanny-cardell-354a4863/">
-                    <img src="./images/linkedin-icon.png" alt="Linkedin icon">
-                    <!--<p>Linkedin</p> --> </a> 
+                    <img src="./images/LinkedInIcon.png" alt="Linkedin icon">
+                    <p>Linkedin</p></a> 
                     <a href="https://github.com/fannycardell">
-                    <img src="./images/github-icon.png" alt="Github icon">                    
-                    <!--<p>GitHub</p> --> </a>
+                    <img src="./images/GitHubIcon.png" alt="Github icon">                    
+                    <p>GitHub</p></a>
                     <a href="https://stackoverflow.com/users/19752574/fanny-cardell">
-                    <img src="./images/Stack-icon.png" alt="StackOverflow icon">
-                     <!-- <p>Stack Overflow</p>--> </a>
+                    <img src="./images/StackIcon.png" alt="StackOverflow icon">
+                    <p>Stack <br> Overflow</p></a>
                 </div>
         </div>
     </section>        
